--- a/Reto2/reto-2-react.html
+++ b/Reto2/reto-2-react.html
@@ -31,7 +31,7 @@
         element(
           "ul",
           null,
-          list.map((item) => e("li", null, item))
+          list.map((item) => element("li", null, item))
         )
       ),
       document.getElementById("root")
